--- a/3keys_for_logicmill/app.ipynb
+++ b/3keys_for_logicmill/app.ipynb
@@ -869,17 +869,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged_df.to_csv(\"data_final.csv\")"
+    "merged_df.to_csv(\"3keys_for_logicmill.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#reading the data which contains the keys that need to be passed to logicmill server\n",
-    "data_final=pd.read_csv(\"data_final.csv\")"
+    "data_final=pd.read_csv(\"3keys_for_logicmill.csv\")"
    ]
   },
   {
