--- a/7similar_patents_less_than_date/task7.ipynb
+++ b/7similar_patents_less_than_date/task7.ipynb
@@ -2255,11 +2255,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_final2.to_csv(\"data_final2.csv\",index=False)"
+    "data_final2.to_csv(\"7similar_patents_less_than_date.csv\",index=False)"
    ]
   },
   {
