--- a/8similar_patents_with_techclasses/task 8.ipynb
+++ b/8similar_patents_with_techclasses/task 8.ipynb
@@ -5616,11 +5616,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_with_tech_class.to_csv('data_with_tech_class.csv', index=False)"
+    "data_with_tech_class.to_csv('8similar_patents_with_techclasses.csv', index=False)"
    ]
   },
   {
