--- a/task26/task26.ipynb
+++ b/task26/task26.ipynb
@@ -2,9 +2,128 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>docdb_family_id</th>\n",
+       "      <th>earliest_pat_publn_id</th>\n",
+       "      <th>earliest_filing_date</th>\n",
+       "      <th>appln_auth</th>\n",
+       "      <th>granted</th>\n",
+       "      <th>similar_patents</th>\n",
+       "      <th>num_unique_patents</th>\n",
+       "      <th>cited_docdb_family_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>574528.0</td>\n",
+       "      <td>307102421.0</td>\n",
+       "      <td>1985-04-10</td>\n",
+       "      <td>EP</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>[(574528, 1.999717), (9306402, 1.9822814), (84...</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>[5970115, 6025659, 6695018, 8626155, 9303184, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>574586.0</td>\n",
+       "      <td>387396319.0</td>\n",
+       "      <td>1987-06-08</td>\n",
+       "      <td>EP</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>[(574586, 1.9997215), (63363761, 1.97839), (83...</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>[2979913, 3291893, 6281119, 9513207, 21967964,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>574660.0</td>\n",
+       "      <td>387398325.0</td>\n",
+       "      <td>1986-08-04</td>\n",
+       "      <td>EP</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>[(574660, 1.9997239), (6240233, 1.9768794), (2...</td>\n",
+       "      <td>1658</td>\n",
+       "      <td>[5956195, 11260528, 22181831, 22437920, 226429...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1226456.0</td>\n",
+       "      <td>303518198.0</td>\n",
+       "      <td>1991-08-29</td>\n",
+       "      <td>EP</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>[(1226456, 1.9997258), (4856238, 1.9822338), (...</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>[6248581, 8808809, 9247749, 9270571, 22049919,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1226485.0</td>\n",
+       "      <td>302640285.0</td>\n",
+       "      <td>1992-08-12</td>\n",
+       "      <td>EP</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>[(1226485, 1.9996202), (6328120, 1.987576), (2...</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>[6206849, 6328120, 20427850]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   docdb_family_id  earliest_pat_publn_id earliest_filing_date appln_auth  \\\n",
+       "0         574528.0            307102421.0           1985-04-10         EP   \n",
+       "1         574586.0            387396319.0           1987-06-08         EP   \n",
+       "2         574660.0            387398325.0           1986-08-04         EP   \n",
+       "3        1226456.0            303518198.0           1991-08-29         EP   \n",
+       "4        1226485.0            302640285.0           1992-08-12         EP   \n",
+       "\n",
+       "  granted                                    similar_patents  \\\n",
+       "0       Y  [(574528, 1.999717), (9306402, 1.9822814), (84...   \n",
+       "1       Y  [(574586, 1.9997215), (63363761, 1.97839), (83...   \n",
+       "2       Y  [(574660, 1.9997239), (6240233, 1.9768794), (2...   \n",
+       "3       Y  [(1226456, 1.9997258), (4856238, 1.9822338), (...   \n",
+       "4       Y  [(1226485, 1.9996202), (6328120, 1.987576), (2...   \n",
+       "\n",
+       "   num_unique_patents                              cited_docdb_family_id  \n",
+       "0                2000  [5970115, 6025659, 6695018, 8626155, 9303184, ...  \n",
+       "1                2000  [2979913, 3291893, 6281119, 9513207, 21967964,...  \n",
+       "2                1658  [5956195, 11260528, 22181831, 22437920, 226429...  \n",
+       "3                2000  [6248581, 8808809, 9247749, 9270571, 22049919,...  \n",
+       "4                2000                       [6206849, 6328120, 20427850]  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#reading data to be evaluated\n",
     "import pandas as pd\n",
@@ -14,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +142,7 @@
        "('3F4vTJUBi0Uo32f0u5vg', 1.9715528)"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,16 +154,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data[[96060, 163838, 168956]]"
+    "data.loc[[96060, 163838, 168956]].to_pickle(\"26noisy_patents.pkl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +367,7 @@
        "[228195 rows x 8 columns]"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +584,7 @@
        "[228195 rows x 8 columns]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,12 +669,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "def first_rank_of_first_relevant(df, k=1000):\n",
     "    def rfr(row):\n",
     "        # Extract only the patent IDs from the tuples\n",
@@ -577,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +744,7 @@
        "      <td>[5970115, 6025659, 6695018, 8626155, 9303184, ...</td>\n",
        "      <td>0.142857</td>\n",
        "      <td>0.060822</td>\n",
-       "      <td>7.0</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -641,7 +758,7 @@
        "      <td>[2979913, 3291893, 6281119, 9513207, 21967964,...</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>1001.0</td>\n",
+       "      <td>1001</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -655,7 +772,7 @@
        "      <td>[5956195, 11260528, 22181831, 22437920, 226429...</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.041854</td>\n",
-       "      <td>14.0</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -669,7 +786,7 @@
        "      <td>[6248581, 8808809, 9247749, 9270571, 22049919,...</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.054725</td>\n",
-       "      <td>11.0</td>\n",
+       "      <td>11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -683,7 +800,7 @@
        "      <td>[6206849, 6328120, 20427850]</td>\n",
        "      <td>0.500000</td>\n",
        "      <td>0.500000</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -712,14 +829,14 @@
        "4                2000                       [6206849, 6328120, 20427850]   \n",
        "\n",
        "     MRR@10  MAP@1000  RFR@1000  \n",
-       "0  0.142857  0.060822       7.0  \n",
-       "1  0.000000  0.000000    1001.0  \n",
-       "2  0.000000  0.041854      14.0  \n",
-       "3  0.000000  0.054725      11.0  \n",
-       "4  0.500000  0.500000       2.0  "
+       "0  0.142857  0.060822         7  \n",
+       "1  0.000000  0.000000      1001  \n",
+       "2  0.000000  0.041854        14  \n",
+       "3  0.000000  0.054725        11  \n",
+       "4  0.500000  0.500000         2  "
       ]
      },
-     "execution_count": 101,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,12 +847,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "#storing the results\n",
     "data.to_pickle(\"26evaluated_data_logicmill.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MRR@10 for logicmill = 0.1616\n",
+      "MAP@1000 for logicmill = 0.0838\n",
+      "RFR@1000 for logicmill = 176.8547\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"MRR@10 for logicmill = {data['MRR@10'].mean():0.4f}\")\n",
+    "print(f\"MAP@1000 for logicmill = {data['MAP@1000'].mean():0.4f}\")\n",
+    "print(f\"RFR@1000 for logicmill = {data['RFR@1000'].mean():0.4f}\")"
    ]
   },
   {
