--- a/21similar_patents_byUpdatedLogicMill.ipynb
+++ b/21similar_patents_byUpdatedLogicMill.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -100,6 +100,7 @@
     }
    ],
    "source": [
+    "#reading represenatative patents\n",
     "import pandas as pd\n",
     "data=pd.read_csv(\"patstat_pat_no.csv\")\n",
     "data.head()"
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +214,7 @@
     ")\n",
     "embedding = res[\"_source\"][\"paecter_embedding\"]\n",
     "k = 2000\n",
-    "target_date = res[\"_source\"][\"earliest_priority_date\"]  #publication date of the focal patent\n",
+    "target_date = res[\"_source\"][\"earliest_priority_date\"]  #priority date of the focal patent\n",
     "\n",
     "# Construct the search query with KNN and date filter\n",
     "query = {\n",
@@ -224,7 +225,7 @@
     "                {  # kNN Search\n",
     "                    \"knn\": {\n",
     "                        \"field\": \"paecter_embedding\",\n",
-    "                        \"num_candidates\": min(k * 2, 10_000),  # Increase num_candidates\n",
+    "                        \"num_candidates\": min(k * 2, 10_000),\n",
     "                        \"query_vector\": embedding\n",
     "                    }\n",
     "                },\n",
@@ -1388,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1404,7 +1405,7 @@
     "        )\n",
     "        embedding = res[\"_source\"][\"paecter_embedding\"]\n",
     "        k = 2000\n",
-    "        target_date = res[\"_source\"][\"earliest_priority_date\"]  #publication date of the focal patent\n",
+    "        target_date = res[\"_source\"][\"earliest_priority_date\"]  #priority date of the focal patent\n",
     "\n",
     "        # Construct the search query with KNN and date filter\n",
     "        query = {\n",
@@ -1717,6 +1718,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#storing the patents for which logic mill server gave error fetching\n",
     "import pickle\n",
     "with open(\"21error_ids.pkl\", \"wb\") as f:\n",
     "    pickle.dump(error_ids, f)"
