--- a/22similar_patents_atleast1000.ipynb
+++ b/22similar_patents_atleast1000.ipynb
@@ -364,6 +364,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#storing patents which were not found in Logic Mill server\n",
     "(data_notfound.reset_index(drop=True)).to_pickle(\"22patents_NotFound.pkl\")"
    ]
   },
@@ -373,6 +374,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#storing patents for which unique similar patents fetched were atleast 1000\n",
     "(data_atleast1000.reset_index(drop=True)).to_pickle(\"22patents_atleast1000.pkl\")"
    ]
   },
@@ -382,6 +384,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#storing patents with less than 1000 similar patents for retrying\n",
     "(data_lessthan1000.reset_index(drop=True)).to_pickle(\"22patents_lessthan1000.pkl\")"
    ]
   },
