--- a/25data_with_citations.ipynb
+++ b/25data_with_citations.ipynb
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -222,6 +222,7 @@
     }
    ],
    "source": [
+    "#querying sql database to fetch citations\n",
     "conn = mysql.connector.connect(**db_config)\n",
     "family_ids=tuple(data['docdb_family_id'])\n",
     "cursor = conn.cursor(dictionary=True)\n",
@@ -662,6 +663,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#storing patents along with citaions\n",
     "data_with_citations.to_pickle(\"25patents_with_citations.pkl\")"
    ]
   },
@@ -687,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -823,6 +825,7 @@
     }
    ],
    "source": [
+    "#patents for which no citation was found\n",
     "result_df = data.merge(table2, on='docdb_family_id', how='left', indicator=True)\n",
     "result_df.head()"
    ]
