--- a/23similar_patents_less_than1000.ipynb
+++ b/23similar_patents_less_than1000.ipynb
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
     ")\n",
     "embedding = res[\"_source\"][\"paecter_embedding\"]\n",
     "k = 2000\n",
-    "target_date = res[\"_source\"][\"earliest_priority_date\"]  #publication date of the focal patent\n",
+    "target_date = res[\"_source\"][\"earliest_priority_date\"]  #priority date of the focal patent\n",
     "\n",
     "# Construct the search query with KNN and date filter\n",
     "query = {\n",
@@ -257,7 +257,7 @@
     "                {  # kNN Search\n",
     "                    \"knn\": {\n",
     "                        \"field\": \"paecter_embedding\",\n",
-    "                        \"num_candidates\": min(k * 2, 10_000),  # Increase num_candidates\n",
+    "                        \"num_candidates\": min(k * 2, 10_000),\n",
     "                        \"query_vector\": embedding\n",
     "                    }\n",
     "                },\n",
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
     ")\n",
     "embedding = res[\"_source\"][\"paecter_embedding\"]\n",
     "k = 3000\n",
-    "target_date = res[\"_source\"][\"earliest_priority_date\"]  #publication date of the focal patent\n",
+    "target_date = res[\"_source\"][\"earliest_priority_date\"]  #priority date of the focal patent\n",
     "\n",
     "# Construct the search query with KNN and date filter\n",
     "query = {\n",
@@ -442,7 +442,7 @@
     "                {  # kNN Search\n",
     "                    \"knn\": {\n",
     "                        \"field\": \"paecter_embedding\",\n",
-    "                        \"num_candidates\": min(k * 2, 10_000),  # Increase num_candidates\n",
+    "                        \"num_candidates\": min(k * 2, 10_000),\n",
     "                        \"query_vector\": embedding\n",
     "                    }\n",
     "                },\n",
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1730,7 +1730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2884,7 +2884,7 @@
     "        )\n",
     "        embedding = res[\"_source\"][\"paecter_embedding\"]\n",
     "        k = 3000\n",
-    "        target_date = res[\"_source\"][\"earliest_priority_date\"]  #publication date of the focal patent\n",
+    "        target_date = res[\"_source\"][\"earliest_priority_date\"]  #priority date of the focal patent\n",
     "\n",
     "        # Construct the search query with KNN and date filter\n",
     "        query = {\n",
@@ -4359,7 +4359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4689,7 +4689,7 @@
     "        )\n",
     "        embedding = res[\"_source\"][\"paecter_embedding\"]\n",
     "        k = 4000\n",
-    "        target_date = res[\"_source\"][\"earliest_priority_date\"]  #publication date of the focal patent\n",
+    "        target_date = res[\"_source\"][\"earliest_priority_date\"]  #priority date of the focal patent\n",
     "\n",
     "        # Construct the search query with KNN and date filter\n",
     "        query = {\n",
@@ -4700,7 +4700,7 @@
     "                        {  # kNN Search\n",
     "                            \"knn\": {\n",
     "                                \"field\": \"paecter_embedding\",\n",
-    "                                \"num_candidates\": min(k * 2, 10_000),  # Increase num_candidates\n",
+    "                                \"num_candidates\": min(k * 2, 10_000),\n",
     "                                \"query_vector\": embedding\n",
     "                            }\n",
     "                        },\n",
@@ -5517,7 +5517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5652,7 +5652,7 @@
     "        )\n",
     "        embedding = res[\"_source\"][\"paecter_embedding\"]\n",
     "        k = 6000\n",
-    "        target_date = res[\"_source\"][\"earliest_priority_date\"]  #publication date of the focal patent\n",
+    "        target_date = res[\"_source\"][\"earliest_priority_date\"]  #priority date of the focal patent\n",
     "\n",
     "        # Construct the search query with KNN and date filter\n",
     "        query = {\n",
@@ -5663,7 +5663,7 @@
     "                        {  # kNN Search\n",
     "                            \"knn\": {\n",
     "                                \"field\": \"paecter_embedding\",\n",
-    "                                \"num_candidates\": min(k * 2, 10_000),  # Increase num_candidates\n",
+    "                                \"num_candidates\": min(k * 2, 10_000), \n",
     "                                \"query_vector\": embedding\n",
     "                            }\n",
     "                        },\n",
@@ -5890,7 +5890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5971,7 +5971,7 @@
     "        )\n",
     "        embedding = res[\"_source\"][\"paecter_embedding\"]\n",
     "        k = 8000\n",
-    "        target_date = res[\"_source\"][\"earliest_priority_date\"]  #publication date of the focal patent\n",
+    "        target_date = res[\"_source\"][\"earliest_priority_date\"]  #priority date of the focal patent\n",
     "\n",
     "        # Construct the search query with KNN and date filter\n",
     "        query = {\n",
@@ -5982,7 +5982,7 @@
     "                        {  # kNN Search\n",
     "                            \"knn\": {\n",
     "                                \"field\": \"paecter_embedding\",\n",
-    "                                \"num_candidates\": min(k * 2, 10_000),  # Increase num_candidates\n",
+    "                                \"num_candidates\": min(k * 2, 10_000), \n",
     "                                \"query_vector\": embedding\n",
     "                            }\n",
     "                        },\n",
@@ -6870,7 +6870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -6951,7 +6951,7 @@
     "        )\n",
     "        embedding = res[\"_source\"][\"paecter_embedding\"]\n",
     "        k = 10000\n",
-    "        target_date = res[\"_source\"][\"earliest_priority_date\"]  #publication date of the focal patent\n",
+    "        target_date = res[\"_source\"][\"earliest_priority_date\"]  #priority date of the focal patent\n",
     "\n",
     "        # Construct the search query with KNN and date filter\n",
     "        query = {\n",
@@ -6962,7 +6962,7 @@
     "                        {  # kNN Search\n",
     "                            \"knn\": {\n",
     "                                \"field\": \"paecter_embedding\",\n",
-    "                                \"num_candidates\": min(k * 2, 10_000),  # Increase num_candidates\n",
+    "                                \"num_candidates\": min(k * 2, 10_000),\n",
     "                                \"query_vector\": embedding\n",
     "                            }\n",
     "                        },\n",
