--- a/26evaluation_logicmill.ipynb
+++ b/26evaluation_logicmill.ipynb
@@ -847,11 +847,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#storing the results\n",
+    "#storing data with results\n",
     "data.to_pickle(\"26evaluated_data_logicmill.pkl\")"
    ]
   },
